k8s/deployment.yaml
kind: Deployment
apiVersion: apps/v1beta1
metadata:
  name: ${ENVIRONMENT}-pact-broker
  namespace: ${NAMESPACE}
spec:
  replicas: 1
  minReadySeconds: 10
  selector:
    matchLabels:
      area: ${NAMESPACE}
      tier: local
      application: pact-broker
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 0
  template:
    metadata:
      labels:
        area: ${NAMESPACE}
        tier: local
        application: pact-broker
    spec:
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      automountServiceAccountToken: false
      securityContext:
        fsGroup: 101
        runAsNonRoot: true
      volumes:
        - name: pact-broker-pv-storage
          persistentVolumeClaim:
            claimName: pact-broker-pv-claim
      containers:
      - name: pact-broker
        image: registry.hub.docker.com/pactfoundation/pact-broker:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9292
          name: http
        - containerPort: 8100
          name: http-proxy
        resources:
          limits:
            memory: "1024Mi"
            cpu: '2000m'
          requests:
            memory: "1024Mi"
            cpu: '2000m'
        securityContext:
          readOnlyRootFilesystem: true
          runAsUser: 101
        volumeMounts:
          - name: pact-broker-pv-storage
            mountPath: "/pvstorage"
